--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://mern-appointment-app:123@mern-appointment-app.dkqzdmc.mongodb.net/?retryWrites=true&w=majority&appName=mern-appointment-app
+MONGO_URI=""
